--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^9.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
