--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 MONGOOSEDB_RUL = mongodb+srv://hieunhather:LIfnjCc1dYim9oqt@cluster0.ir6vb.mongodb.net/reactnnocde-app
+JWT_SECRET = nodeshop1234
